--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #5be848;
+      background-color: white;
       font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #000000;
+      color: #444444;
     }
     #container {
       margin: 0 auto;
       width: 700px;
     }
-    h1 { font-size: 3.8em; color: #a417b7; margin-bottom: 3px; }
+    h1 { font-size: 3.8em; color: #444444; margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
     h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #a417b7; }
-    h3 { text-align: center; color: #a417b7; }
-    a { color: #a417b7; }
+    h2 { font-size: 1.5em; color: #444444; }
+    h3 { text-align: center; color: #444444; }
+    a { color: #444444; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
     pre { background: #000; color: #fff; padding: 15px;}
@@ -65,9 +65,6 @@ expressions, OpenRegex does not have this restriction.  OpenRegex is open to any
     <h2>Authors</h2>
     <p>Michael Schmitz (schmmd@cs.washington.edu)</p>
     
-    <h2>Contact</h2>
-    <p>Michael Schmitz (schmmd@cs.washington.edu)</p>
-
     <h2>Download</h2>
     <p>
       You can download this project in either
